--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 <body>
 <iframe src="swf/singer-boarding.swf" width="800" height="600"></iframe>
 <Hi its Linh><h3>
-A Flash animation I made using images and gifs found on the Web. <br/>Started extracting the snowman at the end, but still have many states to fix. - Singer</p></h3>
+A Flash animation I made using images and gifs found on the Web. <br/>Started extracting the snowman at the end, but still have many states to fix. - Singer</hi im linh></h3>
 </body>
 </html>
