--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-<Linh>GitHub Example</Linh>
+<title>GitHub Example -Linh</title>
 </head>
 <body>
 <iframe src="swf/singer-boarding.swf" width="800" height="600"></iframe>
-<Hi its Linh><h3>
-A Flash animation I made using images and gifs found on the Web. <br/>Started extracting the snowman at the end, but still have many states to fix. - Singer</hi im linh></h3>
+<p><h3>
+its linh
 </body>
 </html>
