Im hoping to upload this example

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>GitHub Example -Linh</title>
+<title>GitHub Example -Linh2</title>
 </head>
 <body>
 <iframe src="swf/singer-boarding.swf" width="800" height="600"></iframe>
